@@ -365,7 +365,7 @@ received on.  The payload is a \texttt{struct sockaddr}. \\
 \hline
 \texttt{HOST} & the \texttt{Host} HTTP request header \\
 \hline
-\texttt{URI} & the URI from the HTTP request (without the query
+\texttt{URI} & the raw URI from the HTTP request (without the query
 string) \\
 \hline
 
